maven_project1/src/test/java/com/capg/beans/Student.java
package com.capg.beans;

class Mother{
	
}
class Father{
	
}

public class Student //extends Mother,Father// error 
{

}
